--- a/project_hive/pubspec.yaml
+++ b/project_hive/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  cloud_firestore: ^4.5.1
+  firebase_storage: ^11.1.0
+  firebase_core: ^2.9.0
+  firebase_auth: ^4.4.1
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
