--- a/project_hive/pubspec.yaml
+++ b/project_hive/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^2.9.0
   firebase_auth: ^4.4.1
   get: ^4.6.5
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
